fixed alignement issues, cleaned up CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,24 @@
-* {
-  /* margin: 20px 20px 40px 20px;  */
-}
-
 body {
-  /* background-image: url("../images/untitled.png"); */
-  /* background-image: url("../images/Hatteraslighthoue.jpg"); */
+  background-image: url("../images/racingstripeBG.png");
   color: khaki;
   font-family: Helvetica, Arial, sans-serif;
   background-color: black;
-  
 }
 
 header {
-  /* display: inside; */
-  /* padding: 55px; */
   background-color: black;
   color: khaki;
   border-radius: 18px;
   border: 8px ridge khaki; 
   height: 250px;
   margin: 20px 20px 40px 20px; 
-  
 }
 
 header div {
-/* display: flex;
-flex-wrap: nowrap; */
-/* font-size: 55px; */
 color: darkred;
-/* margin-bottom: 25px; */
 padding: 0 25px 20px 50px;
 display: inline-block;
 border-bottom: 3px solid;
-
 
 }
  header h2 {
@@ -42,20 +28,17 @@ border-bottom: 3px solid;
   display: inline-block;
   border-bottom: 3px solid khaki;
   border-bottom-left-radius: 18px;
-  /* font-weight: bold;
-  font-size: 36px;
-  color: khaki; 
-  /* margin: 0 10px 0 10px; */
-  display: inline;*/
 }
 
 header nav {
 justify-content: flex-end;
  margin: 20px;
 }
+
 header li {
   display: inline;
 }
+
 header nav ul li a {
   margin: 0 30px;
   font-weight: lighter;
@@ -63,13 +46,109 @@ header nav ul li a {
   color: khaki;
   list-style-type: none;
 }
-/* header .hero { */
-  /* background-image: url("../images/Hatteraslighthoue.jpg");
-  background-size: 100%;
-  vertical-align: bottom;
-  height: 100px;
-  border-radius: 0 0 10px 10px;
-  } */
+
+
+.info {
+  text-align: left;
+  background-color: black;
+  display: block;
+  margin: 20px 20px 40px 20px;
+  border-radius: 18px;
+  border: 8px ridge khaki; 
+}
+
+.info p {
+  /* text-align: left; */
+  line-height: 1.7;
+  color: khaki;
+  width: 98;
+  font-size: 20px;
+  margin: 25px;
+}
+
+section .info {
+  display: block;
+  flex-direction: row;
+  margin: 20px 20px 40px 20px; 
+}
+
+.section-title {
+  font-size: 55px;
+  color: darkred;
+  margin-top: 25px; 
+  padding: 0 25px 20px 50px;
+  display: inline-block;
+  border-bottom: 3px solid;
+  border-bottom-left-radius: 18px;
+}
+
+.primary-border {
+  border-color: khaki;
+}
+
+/* REACH OUT STYLES START */
+.contact {
+  text-align: center;
+  background: khaki;
+  border: 3 solid dimgray;
+}
+
+.project {
+  background-color: khaki;
+  color: black;
+  border-radius: 10px;
+  border: 8px ridge lightgray;
+  margin: 20px;
+  text-align: center;
+  border-radius: 16px;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  height: 60px;
+  padding: 16px;
+  width: 160px;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px; 
+}
+
+.project:hover {
+  background-color: black;
+  color: khaki;
+} 
+
+#reach-out img {
+  border: 8px ridge khaki;
+  border-radius: 10px;
+  height: 250px;
+  margin-left: 25px;
+  margin-bottom: 25px;
+}
+.contact-info {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  color: khaki;
+}
+
+.contact-info h3 {
+  color: khaki;
+  font-size: 32px;
+  padding: 0 0 0 50px;
+  text-align: center;
+}
+
+.contact-info .address {
+  /* margin: 10px 0; */
+  /* line-height: 1.5; */
+  font-size: 20px;
+  list-style: none;
+}
+
+.contact-info a {
+  color: khaki;
+}
 
 
 footer {
@@ -93,115 +172,3 @@ footer div {
   line-height: 1.5;
   text-align: right;
 }
-/* 
-#portfolio {
-  display: inline-flexbox;
-} */
-.project {
-  width: 250PX;
-  height: 50px;
-  background-color: khaki;
-  color: #39a6b2;
-  border-radius: 10px;
-  border: 8px ridge lightgray;
-  margin: 20px
-  text-align: center;
-}
-
-
-.info {
-  text-align: left;
-  background-color: black;
-  display: block;
-  margin: 20px 20px 40px 20px;
-  border-radius: 18px;
-  border: 8px ridge khaki; 
-
- 
- }
-
-.info p {
-  /* text-align: left; */
-  line-height: 1.7;
-  color: khaki;
-  width: 98;
-  font-size: 20px;
-  margin: 25px;
-}
-section {
-
-
-}
-section .info {
-  display: block;
-  flex-direction: row;
-  margin: 20px 20px 40px 20px; 
-}
-.project {
-  display: block;
-  border-radius: 10px;
-  width: 350;
-  height: 50;
-  align-items: center;
-}
-
-.section-title {
-  font-size: 55px;
-  color: darkred;
-  margin-top: 25px; 
-  padding: 0 25px 20px 50px;
-  display: inline-block;
-  border-bottom: 3px solid;
-  border-bottom-left-radius: 18px;
-}
-
-.primary-border {
-  border-color: khaki;
-}
-
-/* REACH OUT STYLES START */
-.contact {
-  text-align: center;
-  background: khaki;
-  border: 3 solid dimgray;
-}
-.project {
-  display:inline-flexbox;
-  margin: 20px;
-  text-align: center;
-}
-#reach-out img {
-  border: 8px ridge khaki;
-  border-radius: 10px;
-  height: 250px;
-  box-shadow: 10px 10px black;
-}
-.contact-info {
-  /* display: grid; */
-  
-  /* text-align: left; */
-  /* margin: 30px; */
-  color: khaki;
-}
-
-.contact-info h3 {
-  color: khaki;
-  font-size: 32px;
-  padding: 0 0 0 50px;
-  text-align: center;
-}
-
-.contact-info .address {
-  /* margin: 10px 0; */
-  /* line-height: 1.5; */
-  font-size: 20px;
-  list-style: none;
-  text-align: center;
-  
-  
-}
-
-.contact-info a {
-  color: khaki;
-}
-
